Actualizacion de la entrega numero 2

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
 
-    
+
     <h1 class="titulo tituloDos"> Guarderia Coder </h1>
 
     <p class="objetivo objetivoDos">
@@ -61,35 +61,39 @@
     <section id="seccionNoticias">
         <div class="noticiasTexto">
             <h3 class="tituloNoticia">Alimentacion saludable</h3>
-            <p>La alimentación debe adaptarse a sus características individuales, teniendo en cuenta su ritmo de
+            <p class="txtNot">La alimentación debe adaptarse a sus características individuales, teniendo en cuenta su
+                ritmo de
                 crecimiento y desarrollo, su apetito, sus gustos, su estado de salud y la actividad física que realiza.
                 No obstante, existen unas orientaciones generales que se traducen en frecuencia de consumo de alimentos
                 y en cantidades aconsejadas (raciones) acordes a cada etapa, que te pueden servir de ayuda para diseñar
                 una dieta saludable y equilibrada.</p>
-            <button class="btnNot">Mas informacion</button>
-        </div>
-        <div class="noticiaImagen">
-            <img class="imgNoticia" src="../img/f8.jpg" alt="Niño jugando">
+            <div><button class="btnNot">Mas informacion</button></div>
         </div>
 
+        <div class="noticiaImagen">
+            <img class="col-md-5 order-md-1 imgNoticia" src="../img/f8.jpg" alt="Niño jugando">
+        </div>
     </section>
 
+
     <section id="seccionNoticias">
-        <div class="noticiasTexto">
-            <h3 class="tituloNoticia">Deportes y juegos</h3>
-            <p>La educación física suele ser la materia favorita de los más pequeños de la casa. A continuación, veremos
-                algunos juegos de educación física, que a los niños les encantarán.</p>
-            <button class="btnNot">Mas informacion</button>
-        </div>
-        <div class="noticiaImagen">
-            <img class="imgNoticia" src="../img/f5.jpg" alt="Niños jugando">
-        </div>
+            <div class="noticiasTexto">
+                <h3 class="tituloNoticia">Deportes y juegos</h3>
+                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A continuación,
+                    veremos
+                    algunos juegos de educación física, que a los niños les encantarán.</p>
+                <button class="btnNot">Mas informacion</button>
+            </div>
+
+            <div class="noticiaImagen">
+                <img class="imgNoticia" src="../img/f5.jpg" alt="Niños jugando">
+            </div>
     </section>
 
     <section id="seccionNoticias">
         <div class="noticiasTexto">
             <h3 class="tituloNoticia">Ambientacion al jardin</h3>
-            <p>La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante
+            <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante
                 que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
             <button class="btnNot">Mas informacion</button>
         </div>
@@ -114,4 +118,5 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
