Actualizacion de la pagina noticias

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <main>
         <div class="imagenFondo">
             <div class="cajaIntro">
-                <div>
+                <div class="caja">
                     <p class="bienvenidoA"> Bienvenidos a </p>
                 </div>
 
-                <div>
+                <div class="caja">
                     <h1 class="titulo"> Guarderia Coder </h1>
                 </div>
 
-                <div>
+                <div class="caja">
                     <p class="objetivo">
                         <span class="jugar"> Jugar.</span>
                         <span class="aprender"> Aprender.</span>
