--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,13 +49,15 @@
     </header>
 
     <main>
-        <h1 class="titulo tituloDos"> Guarderia Coder </h1>
-
-        <p class="objetivo objetivoDos">
-            <span class="jugar"> Jugar.</span>
-            <span class="aprender"> Aprender.</span>
-            <span class="crecer"> Crecer</span>
-        </p>
+        <div class="tituloPagina">
+            <h1 class="tituloDos"> Guarderia Coder </h1>
+    
+            <p class="objetivoDos">
+                <span class="jugar"> Jugar.</span>
+                <span class="aprender"> Aprender.</span>
+                <span class="crecer"> Crecer</span>
+            </p>
+        </div>
 
         <section id="contact" class="contact">
             <h2 class="tituloSecundario">Contactanos</h2>
