--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -49,17 +49,19 @@
 
     <!-- EVENTOS -->
     <main>
-        <h1 class="titulo tituloDos"> Guarderia Coder </h1>
-
-        <p class="objetivo objetivoDos">
-            <span class="jugar"> Jugar.</span>
-            <span class="aprender"> Aprender.</span>
-            <span class="crecer"> Crecer</span>
-        </p>
+        <div class="tituloPagina">
+            <h1 class="tituloDos"> Guarderia Coder </h1>
+    
+            <p class="objetivoDos">
+                <span class="jugar"> Jugar.</span>
+                <span class="aprender"> Aprender.</span>
+                <span class="crecer"> Crecer</span>
+            </p>
+        </div>
 
         <section id="events" class="events">
             <div class="container" data-aos="fade-up">
-                <h2 class="tituloSecundario">Proximos Eventos</h2>
+                <h2 class="tituloEvento">Proximos Eventos</h2>
 
                 <div class="row">
                     <div class="col-md-6 d-flex align-items-stretch">
