--- a/pages/programa.html
+++ b/pages/programa.html
@@ -48,15 +48,16 @@
         </nav>
     </header>
 
-    <h1 class="titulo tituloDos"> Guarderia Coder </h1>
+    <div class="tituloPagina">
+        <h1 class="tituloDos"> Guarderia Coder </h1>
 
-    <p class="objetivo objetivoDos">
-        <span class="jugar"> Jugar.</span>
-        <span class="aprender"> Aprender.</span>
-        <span class="crecer"> Crecer</span>
-    </p>
-
-    <h2 class="tituloSecundario">ACTIVIDADES</h2>
+        <p class="objetivoDos">
+            <span class="jugar"> Jugar.</span>
+            <span class="aprender"> Aprender.</span>
+            <span class="crecer"> Crecer</span>
+        </p>
+        <h2 class="tituloSecundario">Actividades</h2>
+    </div>
 
     <div class="actividad">
         <div class="act">
