--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Guarderia Coder.- Contacto .- P° de la Castellana 79, Madrid, 28046A .- +1 5589 55488 55 .- guarderiaCoder@gmail.com">
+
     <title>Guarderia Coder- Inicio</title>
     <link rel="shortcut icon" href="../img/logo.png">
 
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-
+    <!-- NAVBAR -->
     <header class="navbar navbar-expand-lg">
         <nav class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../img/logo.png" alt="Logo Guarderia Coder" class="logo">
@@ -46,12 +48,14 @@
                 </ul>
             </div>
         </nav>
+        <!-- FIN DE NAVBAR -->
     </header>
 
     <main>
+        <!-- TITULO GENERAL PAGINAS SECUNDARIAS -->
         <div class="tituloPagina">
             <h1 class="tituloDos"> Guarderia Coder </h1>
-    
+
             <p class="objetivoDos">
                 <span class="jugar"> Jugar.</span>
                 <span class="aprender"> Aprender.</span>
@@ -59,8 +63,10 @@
             </p>
         </div>
 
+        <!-- CONTACTO -->
+
         <section id="contact" class="contact">
-            <h2 class="tituloSecundario">Contactanos</h2>
+            <h2 class="tituloSecundario">CONTACTANOS</h2>
 
             <div data-aos="fade-up">
                 <iframe style="border:0; width: 100%; height: 350px;" ;
@@ -118,7 +124,7 @@
                                 <textarea class="form-control" name="message" rows="5" placeholder="Mensaje"
                                     required></textarea>
                             </div>
-                            <div class="text-center"><button type="submit">Enviar</button></div>
+                            <div class="text-center"><button class="btnContacto" type="submit">Enviar</button></div>
                         </form>
 
                     </div>
@@ -127,26 +133,29 @@
 
             </div>
         </section>
+        <!-- FIN CONTACTO -->
+    </main>
 
-        <footer class="py-3 my-4">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a>
-                </li>
-                <li class="nav-item"><a href="programa.html" class="nav-link px-2 text-body-secondary">Programas</a>
-                </li>
-                <li class="nav-item"><a href="eventos.html" class="nav-link px-2 text-body-secondary">Eventos</a>
-                </li>
-                <li class="nav-item"><a href="noticias.html" class="nav-link px-2 text-body-secondary">Noticias</a>
-                </li>
-                <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a>
-                </li>
-            </ul>
-            <p class="text-center text-body-secondary">&copy; 2023 Guarderia Coder</p>
-        </footer>
-        <!-- JS BS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-            crossorigin="anonymous"></script>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a>
+            </li>
+            <li class="nav-item"><a href="programa.html" class="nav-link px-2 text-body-secondary">Programas</a>
+            </li>
+            <li class="nav-item"><a href="eventos.html" class="nav-link px-2 text-body-secondary">Eventos</a>
+            </li>
+            <li class="nav-item"><a href="noticias.html" class="nav-link px-2 text-body-secondary">Noticias</a>
+            </li>
+            <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a>
+            </li>
+        </ul>
+        <p class="text-center text-body-secondary">&copy; 2023 Guarderia Coder</p>
+    </footer>
+
+    <!-- JS BS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
