--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Informacion de los eventos que se realizaran en la Guarderia Coder">
+
     <title>Guarderia Coder- Inicio</title>
     <link rel="shortcut icon" href="../img/logo.png">
 
@@ -17,6 +19,8 @@
 
 <body>
     <header class="navbar navbar-expand-lg">
+
+        <!-- NAVBAR -->
         <nav class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../img/logo.png" alt="Logo Guarderia Coder" class="logo">
             </a>
@@ -45,13 +49,14 @@
                 </ul>
             </div>
         </nav>
+        <!-- FIN DEL NAVBAR -->
     </header>
 
     <!-- EVENTOS -->
     <main>
         <div class="tituloPagina">
             <h1 class="tituloDos"> Guarderia Coder </h1>
-    
+
             <p class="objetivoDos">
                 <span class="jugar"> Jugar.</span>
                 <span class="aprender"> Aprender.</span>
@@ -134,6 +139,8 @@
 
             </div>
         </section>
+
+        <!-- FIN DE EVENTOS -->
     </main>
 
     <footer class="py-3 my-4">
