--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Noticias sobre la salud, bienestar, hobbies y diversion de nuestros alumnos para papas, resposables, directores y seños de la Guarderia Coder">
+    
     <title>Guarderia Coder- Inicio</title>
     <link rel="shortcut icon" href="../img/logo.png">
 
@@ -13,11 +15,15 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
+
+    <!-- Animation -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-
     <header class="navbar navbar-expand-lg">
+
+        <!-- NAVBAR -->
         <nav class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../img/logo.png" alt="Logo Guarderia Coder" class="logo">
             </a>
@@ -46,63 +52,76 @@
                 </ul>
             </div>
         </nav>
+        <!-- FIN DEL NAVBAR -->
     </header>
 
-    <div class="tituloPagina">
-        <h1 class="tituloDos"> Guarderia Coder </h1>
+    <main>
+        <!-- TITULO GENERAL DE PAGINA SECUNDARIA -->
+        <div class="tituloPagina">
+            <h1 class="tituloDos"> Guarderia Coder </h1>
 
-        <p class="objetivoDos">
-            <span class="jugar"> Jugar.</span>
-            <span class="aprender"> Aprender.</span>
-            <span class="crecer"> Crecer</span>
-        </p>
-        <h2 class="tituloSecundario">Noticias</h2>
-    </div>
-
-    <section id="seccionNoticias">
-        <div class="noticiasTexto">
-            <h3 class="tituloNoticia">Alimentacion saludable</h3>
-            <p class="txtNot">La alimentación debe adaptarse a sus características individuales, teniendo en cuenta su
-                ritmo de
-                crecimiento y desarrollo, su apetito, sus gustos, su estado de salud y la actividad física que realiza.
-                No obstante, existen unas orientaciones generales que se traducen en frecuencia de consumo de alimentos
-                y en cantidades aconsejadas (raciones) acordes a cada etapa, que te pueden servir de ayuda para diseñar
-                una dieta saludable y equilibrada.</p>
-            <div><button class="btnNot">Mas informacion</button></div>
+            <p class="objetivoDos">
+                <span class="jugar"> Jugar.</span>
+                <span class="aprender"> Aprender.</span>
+                <span class="crecer"> Crecer</span>
+            </p>
+            <h2 class="tituloSecundario">Noticias</h2>
         </div>
 
-        <div class="noticiaImagen">
-            <img class="col-md-5 order-md-1 imgNoticia" src="../img/f8.jpg" alt="Niño jugando">
-        </div>
-    </section>
+        <!-- NOTICIAS -->
+        <section id="seccionNoticias">
+            <div class="noticiasTexto">
+                <h3 class="tituloNoticia">Alimentacion saludable</h3>
+                <p class="txtNot">La alimentación debe adaptarse a sus características individuales, teniendo en cuenta
+                    su
+                    ritmo de
+                    crecimiento y desarrollo, su apetito, sus gustos, su estado de salud y la actividad física que
+                    realiza.
+                    No obstante, existen unas orientaciones generales que se traducen en frecuencia de consumo de
+                    alimentos
+                    y en cantidades aconsejadas (raciones) acordes a cada etapa, que te pueden servir de ayuda para
+                    diseñar
+                    una dieta saludable y equilibrada.</p>
+                <div><button class="btnNot">Mas informacion</button></div>
+            </div>
+
+            <div class="noticiaImagen">
+                <img data-aos="flip-right" class="col-md-5 order-md-1 imgNoticia" src="../img/f8.jpg"
+                    alt="Niño jugando">
+            </div>
+        </section>
 
 
-    <section id="seccionNoticias">
+        <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Deportes y juegos</h3>
-                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A continuación,
+                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A
+                    continuación,
                     veremos
                     algunos juegos de educación física, que a los niños les encantarán.</p>
                 <button class="btnNot">Mas informacion</button>
             </div>
 
             <div class="noticiaImagen">
-                <img class="imgNoticia" src="../img/f5.jpg" alt="Niños jugando">
+                <img data-aos="flip-right" class="imgNoticia" src="../img/f5.jpg" alt="Niños jugando">
             </div>
-    </section>
+        </section>
 
-    <section id="seccionNoticias">
-        <div class="noticiasTexto">
-            <h3 class="tituloNoticia">Ambientacion al jardin</h3>
-            <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante
-                que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
-            <button class="btnNot">Mas informacion</button>
-        </div>
-        <div class="noticiaImagen">
-            <img class="imgNoticia" src="../img/f2.jpg" alt="Niña leyendo un cuento">
-        </div>
-    </section>
-
+        <section id="seccionNoticias">
+            <div class="noticiasTexto">
+                <h3 class="tituloNoticia">Ambientacion al jardin</h3>
+                <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son
+                    difíciles.
+                    Es importante
+                    que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
+                <button class="btnNot">Mas informacion</button>
+            </div>
+            <div class="noticiaImagen">
+                <img data-aos="flip-right" class="imgNoticia" src="../img/f2.jpg" alt="Niña leyendo un cuento">
+            </div>
+        </section>
+        <!-- FIN DE NOTICIAS -->
+    </main>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -114,10 +133,17 @@
         </ul>
         <p class="text-center text-body-secondary">&copy; 2023 Guarderia Coder</p>
     </footer>
+
     <!-- JS BS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <!-- JS Animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
