Se completo los alt de las imagenes que faltaban

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Nuestra propuesta educativa abarca las edades de 0 a 6 años y nuestro mayor desafío es promover la autonomía intelectual, social y moral de los niños, haciendo que su experiencia escolar sea única, participativa y que conecte con su vida diaria, consiguiendo que sean los protagonistas en la construcción del conocimiento mediante un aprendizaje activo y significativo.">
 
     <title>Guarderia Coder- Inicio</title>
-    
+
     <link rel="shortcut icon" href="img/logo.png">
 
     <!-- BS -->
@@ -146,31 +146,16 @@
                             <p class="fst-italic">Los valores que rigen nuestro accionar son:</p>
 
                             <ul>
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La práctica de la escucha: Detenernos a escuchar lo que
-                                    dice el otro (niño/a, docente, familia)tanto mediante palabras como por sus acciones,
-                                    gestos, dibujos u otras manifestaciones, porque todas las conductas reflejan y/o
-                                    comunican el mundo internoque se está construyendo.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La práctica de la escucha: Detenernos a escuchar lo que dice el otro (niño/a, docente, familia)tanto mediante palabras como por sus acciones, gestos, dibujos u otras manifestaciones, porque todas las conductas reflejan y/o comunican el mundo internoque se está construyendo.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Respeto por la singularidad: Es fundamental valorar y
-                                    acompañar los procesos de cada individuo respetando sus tiempos, diferencias y
-                                    elecciones porque creemos que cada niño/a es un potencial inimaginable. Así como los
-                                    adultos también necesitan tiempo para aprender a acompañar, asimilar y/o aceptar
-                                    diferentes situaciones que se puedan presentar con sus hijos/as.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Respeto por la singularidad: Es fundamental valorar y acompañar los procesos de cada individuo respetando sus tiempos, diferencias y elecciones porque creemos que cada niño/a es un potencial inimaginable. Así como los adultos también necesitan tiempo para aprender a acompañar, asimilar y/o aceptar diferentes situaciones que se puedan presentar con sus hijos/as.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La valoración de la diversidad y complejidad: Ponemos
-                                    en práctica la frase “cada persona es un mundo” porque se comprende que la concepción
-                                    homogeneizadora de la enseñanza no explica ni alcanza para entender la realidad porque
-                                    ella es heterogénea. Por esa razón el acercamiento a un mundo real debe partir de
-                                    aceptar la diversidad y la complejidad de la interacción de las diferencias.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La valoración de la diversidad y complejidad: Ponemos en práctica la frase “cada persona es un mundo” porque se comprende que la concepción homogeneizadora de la enseñanza no explica ni alcanza para entender la realidad porque ella es heterogénea. Por esa razón el acercamiento a un mundo real debe partir de aceptar la diversidad y la complejidad de la interacción de las diferencias.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La participación de las familias y sociedad: Entendemos
-                                    a los niños/as como integrantes de una familia y de una sociedad que debe participar y
-                                    asumir el rol que les corresponde por derecho y deber.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La participación de las familias y sociedad: Entendemos a los niños/as como integrantes de una familia y de una sociedad que debe participar y asumir el rol que les corresponde por derecho y deber.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Un jardín colaborativo y comunitario: La institución se
-                                    idea como una organización colaborativa donde el trabajo parte del respeto por cada uno
-                                    de los integrantes, hacia su trabajo y tiempo. A su vez encamina su labor a un enfoque
-                                    donde todos tengamos una participación activa.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Un jardín colaborativo y comunitario: La institución se idea como una organización colaborativa donde el trabajo parte del respeto por cada uno de los integrantes, hacia su trabajo y tiempo. A su vez encamina su labor a un enfoque donde todos tengamos una participación activa.
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -210,7 +195,7 @@
                     <!-- RESEÑA 2 -->
                     <div class="testimonial-wrap">
                         <div class="testimonial-item">
-                            <img src="img/mama1.jpg" class="testimonial-img" alt="">
+                            <img src="img/mama1.jpg" class="testimonial-img" alt="Mama junto a su hija">
                             <h3>Sara Wilsson</h3>
                             <h4>Mama de Lara</h4>
                             <p>
@@ -226,7 +211,7 @@
                     <!-- RESEÑA 3 -->
                     <div class="testimonial-wrap">
                         <div class="testimonial-item">
-                            <img src="img/mama2.jpg" class="testimonial-img" alt="">
+                            <img src="img/mama2.jpg" class="testimonial-img" alt="Mama junto a su hija">
                             <h3>Jena Karlis</h3>
                             <h4>Mama de Elena</h4>
                             <p>
@@ -241,7 +226,7 @@
                     <!-- RESEÑA 4 -->
                     <div class="testimonial-wrap">
                         <div class="testimonial-item">
-                            <img src="img/papa2.jpg" class="testimonial-img" alt="">
+                            <img src="img/papa2.jpg" class="testimonial-img" alt="Papa junto a su hijo">
                             <h3>Matt Brandon</h3>
                             <h4>Papa de Santi</h4>
                             <p>
@@ -257,7 +242,7 @@
                     <!-- RESEÑA 5 -->
                     <div class="testimonial-wrap">
                         <div class="testimonial-item">
-                            <img src="img/papa3.jpg" class="testimonial-img" alt="">
+                            <img src="img/papa3.jpg" class="testimonial-img" alt="Papa junto a su hijo">
                             <h3>John Larson</h3>
                             <h4>Papa de Tomi</h4>
                             <p>
