--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Noticias sobre la salud, bienestar, hobbies y diversion de nuestros alumnos para papas, resposables, directores y seños de la Guarderia Coder">
-    
+
     <title>Guarderia Coder- Inicio</title>
     <link rel="shortcut icon" href="../img/logo.png">
 
@@ -72,16 +72,7 @@
         <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Alimentacion saludable</h3>
-                <p class="txtNot">La alimentación debe adaptarse a sus características individuales, teniendo en cuenta
-                    su
-                    ritmo de
-                    crecimiento y desarrollo, su apetito, sus gustos, su estado de salud y la actividad física que
-                    realiza.
-                    No obstante, existen unas orientaciones generales que se traducen en frecuencia de consumo de
-                    alimentos
-                    y en cantidades aconsejadas (raciones) acordes a cada etapa, que te pueden servir de ayuda para
-                    diseñar
-                    una dieta saludable y equilibrada.</p>
+                <p class="txtNot">La alimentación debe adaptarse a sus características individuales, teniendo en cuenta su ritmo de crecimiento y desarrollo, su apetito, sus gustos, su estado de salud y la actividad física que realiza. No obstante, existen unas orientaciones generales que se traducen en frecuencia de consumo de alimentos y en cantidades aconsejadas (raciones) acordes a cada etapa, que te pueden servir de ayuda para diseñar una dieta saludable y equilibrada.</p>
                 <div><button class="btnNot">Mas informacion</button></div>
             </div>
 
@@ -95,10 +86,7 @@
         <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Deportes y juegos</h3>
-                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A
-                    continuación,
-                    veremos
-                    algunos juegos de educación física, que a los niños les encantarán.</p>
+                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A continuación, veremos algunos juegos de educación física, que a los niños les encantarán.</p>
                 <button class="btnNot">Mas informacion</button>
             </div>
 
@@ -110,12 +98,10 @@
         <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Ambientacion al jardin</h3>
-                <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son
-                    difíciles.
-                    Es importante
-                    que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
+                <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
                 <button class="btnNot">Mas informacion</button>
             </div>
+
             <div class="noticiaImagen">
                 <img data-aos="flip-right" class="imgNoticia" src="../img/f2.jpg" alt="Niña leyendo un cuento">
             </div>
@@ -145,5 +131,4 @@
         AOS.init();
     </script>
 </body>
-
 </html>
