Ultima actualizacion para entrega final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,8 +69,7 @@
             <h2 class="tituloSecundario">CONTACTANOS</h2>
 
             <div data-aos="fade-up">
-                <iframe style="border:0; width: 100%; height: 350px;" ;
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.252448253179!2d-3.6924501!3d40.4475492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228e4ca637b4d%3A0xee243ebbea6f02b9!2sP.%C2%BA%20de%20la%20Castellana%2C%2079%2C%2028046%20Madrid%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1688948628008!5m2!1ses!2sar"
+                <iframe class= "mapa"; src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.252448253179!2d-3.6924501!3d40.4475492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228e4ca637b4d%3A0xee243ebbea6f02b9!2sP.%C2%BA%20de%20la%20Castellana%2C%2079%2C%2028046%20Madrid%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1688948628008!5m2!1ses!2sar"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
