--- a/pages/programa.html
+++ b/pages/programa.html
@@ -73,49 +73,37 @@
             <div class="act" data-aos="fade-right">
                 <img class="actImagen" src="../img/arte.png" alt="lapices">
                 <h3 class="actTitulo">ARTE</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">El arte es un lenguaje que hará que el niño se exprese a través de diferentes elementos y será la creatividad y la imaginación las que tengan un papel más importante en todo este proceso. El arte para los niños es una forma de vivir y tiene muchísimos beneficios.</p>
             </div>
 
             <div class="act" data-aos="fade-up">
                 <img class="actImagen" src="../img/musica.png" alt="tambor">
                 <h3 class="actTitulo">MUSICA</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">La música es un elemento fundamental en esta primera etapa del sistema educativo. El niño empieza a expresarse de otra manera y es capaz de integrarse activamente en la sociedad, porque la música le ayuda a lograr autonomía en sus actividades habituales y ampliar su mundo de relaciones.</p>
             </div>
 
             <div class="act" data-aos="fade-left">
                 <img class="actImagen" src="../img/juegos.png" alt="bicicleta">
                 <h3 class="actTitulo">JUEGOS AL AIRE LIBRE</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">El juego al aire libre es considerado muy importante para el desarrollo intelectual, motor emocional y social de los niños.  Equilibra e armoniza los aprendizajes intelectuales y los motores, integrando estas habilidades de manera coherente en la conducta del niño.</p>
             </div>
 
             <div class="act" data-aos="fade-right">
                 <img class="actImagen" src="../img/letras.png" alt="bloques juguete">
                 <h3 class="actTitulo">LETRAS</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">Al dibujar letras a mano, los niños pueden experimentar con diferentes estilos y técnicas para crear diseños únicos y originales. Esto les permite desarrollar su creatividad y fomentar su autoexpresión.</p>
             </div>
 
             <div class="act" data-aos="fade-up">
                 <img class="actImagen" src="../img/numeros.png" alt="contador numeros">
                 <h3 class="actTitulo">NUMEROS</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">Aprender matemáticas desde niños nos enseña a pensar, es decir, a saber, explicar cómo funcionan las cosas. Analizar ideas, ordenarlas y expresarlas de una forma clara y coherente es vital para que los demás comprendan lo que queremos transmitirles.</p>
             </div>
 
             <div class="act" data-aos="fade-left">
                 <img class="actImagen" src="../img/movimientos.png" alt="pelota">
                 <h3 class="actTitulo">MOVIMIENTOS</h3>
-                <p class="actDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi iste
-                    eligendi. Facilis, sit, possimus consectetur voluptate ad amet tempore modi dolore quo quas mollitia
-                    sunt sint impedit suscipit! Odio!</p>
+                <p class="actDescripcion">Los niños y niñas se sienten competente físicamente y emocionalmente cuando usan su cuerpo para comunicarse y resolver problemas. Y, lo que es más importante, a través del movimiento, sus hijos también desarrollarán un vínculo más estrecho con sus alrededores.</p>
             </div>
         </div>
         <!-- FIN DE LAS ACTIVIDADES DEL PROGRAMA -->
