--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nuestra propuesta educativa abarca las edades de 0 a 6 años y nuestro mayor desafío es promover la autonomía intelectual, social y moral de los niños, haciendo que su experiencia escolar sea única, participativa y que conecte con su vida diaria, consiguiendo que sean los protagonistas en la construcción del conocimiento mediante un aprendizaje activo y significativo.">
+    <meta name="description"
+        content="Nuestra propuesta educativa abarca las edades de 0 a 6 años y nuestro mayor desafío es promover la autonomía intelectual, social y moral de los niños, haciendo que su experiencia escolar sea única, participativa y que conecte con su vida diaria, consiguiendo que sean los protagonistas en la construcción del conocimiento mediante un aprendizaje activo y significativo.">
 
     <title>Guarderia Coder- Inicio</title>
 
@@ -31,21 +32,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fuentes">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/programa.html">Programas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/eventos.html">Eventos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/noticias.html">Noticias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/programa.html">Programas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/eventos.html">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/noticias.html">Noticias</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -92,25 +83,24 @@
                         <div class="content ps-0 ps-lg-5">
                             <p class="fst-italic">
                                 Guarderia Coder es un jardín que nació en el año 2014, con el deseo de crear un espacio
-                                en donde los niños de&nbsp;45 días&nbsp;hasta los&nbsp;5 años, puedan&nbsp;desarrollar
-                                su potencial&nbsp;según las características personales y la edad evolutiva, a partir
-                                de&nbsp;docentes especializadas y espacios equipados&nbsp;para los objetivos planteados.
+                                en donde los niños de 45 días hasta los 5 años, puedan desarrollar su potencial según
+                                las características personales y la edad evolutiva, a partir de docentes especializadas
+                                y espacios equipados para los objetivos planteados.
                                 <br>
                                 La meta principal del jardín es “Educar desde el amor”, brindando espacios seguros y
                                 contención personalizada según las necesidades de cada niño/a.
                                 <br>
-                                La&nbsp;herramienta&nbsp;de trabajo principal de cada una de las docentes de Guarderia
-                                Coder es la&nbsp;escucha, comprensión y respeto
-                                &nbsp;de los más pequeños, y el&nbsp;diálogo&nbsp;constante con los mismos.
+                                La herramienta de trabajo principal de cada una de las docentes de Guarderia Coder es la
+                                escucha, comprensión y respeto de los más pequeños, y el diálogo constante con los
+                                mismos.
                                 <br>
                                 Para el cumplimiento de estas funciones el jardín atenderá a la formación de
-                                competencias referidas a las áreas de&nbsp;Lengua, Matemática, Tecnología, Ciencias
-                                Naturales&nbsp;y Sociales, Expresión Artística,Educación Física y Tecnologías de la
-                                Información y la Comunicación (TICs).&nbsp;Lo cual no significa iniciar al niño en el
-                                aprendizaje sistemático de los contenidos sino, que
-                                proponemos&nbsp;un&nbsp;acercamiento&nbsp;al mundo de los&nbsp; “por qué” &nbsp;como
+                                competencias referidas a las áreas de Lengua, Matemática, Tecnología, Ciencias Naturales
+                                y Sociales, Expresión Artística,Educación Física y Tecnologías de la Información y la
+                                Comunicación (TICs). Lo cual no significa iniciar al niño en el aprendizaje sistemático
+                                de los contenidos sino, que proponemos un acercamiento al mundo de los “por qué” como
                                 pregunta fundante del deseo de conocer, organizar y comprender el mundo en el que
-                                vivimos.&nbsp;
+                                vivimos.
                             </p>
                         </div>
                     </div>
@@ -123,7 +113,6 @@
         <!-- SOBRE NOSOTROS - MISION Y VALORES -->
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
-
                 <!-- TITULO SOBRE NOSOTROS -->
                 <div class="section-header">
                     <h2>Sobre Nosotros</h2>
@@ -140,21 +129,43 @@
                     <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
                         <div class="content ps-0 ps-lg-5">
                             <p class="fst-italic">
-                                Nuestra misión es lograr que los niños/as sean felices, escuchados, entendidos y educados, en el marco de un espacio seguro y equipado, con docentes especializadas.
+                                Nuestra misión es lograr que los niños/as sean felices, escuchados, entendidos y
+                                educados, en el marco de un espacio seguro y equipado, con docentes especializadas.
                             </p>
 
                             <p class="fst-italic">Los valores que rigen nuestro accionar son:</p>
 
                             <ul>
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La práctica de la escucha: Detenernos a escuchar lo que dice el otro (niño/a, docente, familia)tanto mediante palabras como por sus acciones, gestos, dibujos u otras manifestaciones, porque todas las conductas reflejan y/o comunican el mundo internoque se está construyendo.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La práctica de la escucha:
+                                    Detenernos a escuchar lo que dice el otro (niño/a, docente, familia)tanto mediante
+                                    palabras como por sus acciones, gestos, dibujos u otras manifestaciones, porque
+                                    todas las conductas reflejan y/o comunican el mundo internoque se está construyendo.
+                                </li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Respeto por la singularidad: Es fundamental valorar y acompañar los procesos de cada individuo respetando sus tiempos, diferencias y elecciones porque creemos que cada niño/a es un potencial inimaginable. Así como los adultos también necesitan tiempo para aprender a acompañar, asimilar y/o aceptar diferentes situaciones que se puedan presentar con sus hijos/as.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Respeto por la
+                                    singularidad: Es fundamental valorar y acompañar los procesos de cada individuo
+                                    respetando sus tiempos, diferencias y elecciones porque creemos que cada niño/a es
+                                    un potencial inimaginable. Así como los adultos también necesitan tiempo para
+                                    aprender a acompañar, asimilar y/o aceptar diferentes situaciones que se puedan
+                                    presentar con sus hijos/as.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La valoración de la diversidad y complejidad: Ponemos en práctica la frase “cada persona es un mundo” porque se comprende que la concepción homogeneizadora de la enseñanza no explica ni alcanza para entender la realidad porque ella es heterogénea. Por esa razón el acercamiento a un mundo real debe partir de aceptar la diversidad y la complejidad de la interacción de las diferencias.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La valoración de la
+                                    diversidad y complejidad: Ponemos en práctica la frase “cada persona es un mundo”
+                                    porque se comprende que la concepción homogeneizadora de la enseñanza no explica ni
+                                    alcanza para entender la realidad porque ella es heterogénea. Por esa razón el
+                                    acercamiento a un mundo real debe partir de aceptar la diversidad y la complejidad
+                                    de la interacción de las diferencias.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La participación de las familias y sociedad: Entendemos a los niños/as como integrantes de una familia y de una sociedad que debe participar y asumir el rol que les corresponde por derecho y deber.</li>
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La participación de las
+                                    familias y sociedad: Entendemos a los niños/as como integrantes de una familia y de
+                                    una sociedad que debe participar y asumir el rol que les corresponde por derecho y
+                                    deber.</li>
 
-                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Un jardín colaborativo y comunitario: La institución se idea como una organización colaborativa donde el trabajo parte del respeto por cada uno de los integrantes, hacia su trabajo y tiempo. A su vez encamina su labor a un enfoque donde todos tengamos una participación activa.
+                                <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> Un jardín colaborativo y
+                                    comunitario: La institución se idea como una organización colaborativa donde el
+                                    trabajo parte del respeto por cada uno de los integrantes, hacia su trabajo y
+                                    tiempo. A su vez encamina su labor a un enfoque donde todos tengamos una
+                                    participación activa.
                                 </li>
                             </ul>
                         </div>
@@ -184,9 +195,7 @@
                             <h4>Papa de Pedro</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit
-                                rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                                risus at semper.
+                                Un lugar hermoso donde los niños se divierten, aprenden y están muy bien cuidados. Con seños con puro amor y su vocación se nota a flor de piel en cada actividad y charla.
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
@@ -200,9 +209,7 @@
                             <h4>Mama de Lara</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid
-                                cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet
-                                legam anim culpa.
+                                Me siento muy tranquila dejando a mi hija Lara. Las maestras son muy dedicadas, no solo con el cuidado si no con cada actividad que realizan; noto que día a día Lara aprende algo nuevo. Muy recomendable.
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
@@ -216,8 +223,7 @@
                             <h4>Mama de Elena</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam
-                                duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                                Realmente una gran calidez humana y profesionalismo en todas las seños y directoras. Lo super recomendamos. Nuestra hija empezó a los 5 meses y tiene ahora 3 años. Muy agradecidos con la Guarderia Coder!!
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
@@ -231,9 +237,7 @@
                             <h4>Papa de Santi</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat
-                                minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore
-                                labore illum veniam.
+                                Hermosa experiencia! Gracias por el amor que le brindaron a mi hijo, por las enseñanzas. Hoy nos toca despedirnos, después de varios años acompañandonos. Confianza absoluta en ustedes y siempre recomendandolos. 
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
@@ -247,16 +251,13 @@
                             <h4>Papa de Tomi</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster
-                                veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam
-                                culpa fore nisi cillum quid.
+                                Excelente!! Una experiencia hermosa y fue la mejor elección que pudimos haber tomado al decidirnos por la Guarderia Coder para llevar a mi hijo Tomi. Las seños siempre amables y dulces, mucho contenido pedagógico, acompañamiento a las familias y las dires son lo más! Sin dudas será recomendado
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-
             </div>
         </section>
     </main>
@@ -264,14 +265,10 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-            <li class="nav-item"><a href="pages/programa.html" class="nav-link px-2 text-body-secondary">Programas</a>
-            </li>
-            <li class="nav-item"><a href="pages/eventos.html" class="nav-link px-2 text-body-secondary">Eventos</a>
-            </li>
-            <li class="nav-item"><a href="pages/noticias.html" class="nav-link px-2 text-body-secondary">Noticias</a>
-            </li>
-            <li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a>
-            </li>
+            <li class="nav-item"><a href="pages/programa.html" class="nav-link px-2 text-body-secondary">Programas</a></li>
+            <li class="nav-item"><a href="pages/eventos.html" class="nav-link px-2 text-body-secondary">Eventos</a></li>
+            <li class="nav-item"><a href="pages/noticias.html" class="nav-link px-2 text-body-secondary">Noticias</a></li>
+            <li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
         </ul>
         <p class="text-center text-body-secondary">&copy; 2023 Guarderia Coder</p>
     </footer>
@@ -281,4 +278,5 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
